 - Remove class Array (using std::vector instead)
 - Add vector_mapping data to MeshData
 - Use std::vector instead of Array in MeshData
 - Add assignment operator and copy constructor for MeshFunction
 - Add function mesh.move(other_mesh) for moving mesh according to matching mesh (for FSI)
 - Add function mesh.move(u) for moving mesh according to displacement function (for FSI)
 - Add macro dolfin_not_implemented()
 - Add new interpolate() function for interpolation of user-defined function to discrete
 - Make _function_space protected in Function
 - Added access to crs data from python for uBLAS and MTL4 backend
0.9.1 [2009-02-17]
 - Check Rectangle and Box for non-zero dimensions
 - ODE solvers now solve the dual problem
 - New class SubMesh for simple extraction of matching meshes for sub domains
 - Improvements of multiprecision ODE solver
 - Fix Function class copy constructor
 - Bug fixes for errornorm(), updates for new interface
 - Interface update for MeshData: createMeshFunction --> create_mesh_function etc
 - Interface update for Rectangle and Box
 - Add elastodynamics demo
 - Fix memory leak in IntersectionDetector/GTSInterface
 - Add check for swig version, in jit and compile functions
 - Bug fix in dolfin-order script for gzipped files
 - Make shared_ptr work across C++/Python interface
 - Replace std::tr1::shared_ptr with boost::shared_ptr
 - Bug fix in transfinite mean-value interpolation
 - Less annoying progress bar (silent when progress is fast)
 - Fix assignment operator for MeshData
 - Improved adaptive mesh refinement (recursive Rivara) producing better quality meshes
0.9.0 [2009-01-05]
 - Cross-platform fixes
 - PETScMatrix::copy fix
 - Some Trilinos fixes
 - Improvements in MeshData class
 - Do not use initial guess in Newton solver
 - Change OutflowFacet to IsOutflowFacet and change syntax
 - Used shared_ptr for underling linear algebra objects
 - Cache subspaces in FunctionSpace